<resources>
    <string name="app_name">Suitmedia Test</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="name">Name</string>
    <string name="name_hint">John Doe</string>
    <string name="profile_image">Profile Image</string>
    <string name="palindrome">Palindrome</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user">No user selected</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="choose_user">Choose a User</string>
    <string name="empty_field">Field can\'t be empty</string>
    <string name="ok">OK</string>
    <string name="backgroundImage">Background Image</string>
    <string name="back">Back</string>
</resources>